Kubernetes-Manifests/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    service: web
spec:
  replicas: 1
  selector:
    matchLabels:
      service: web
  template:
    metadata:
      labels:
        service: web
    spec:
      containers:
      - name: web
        image: containerregistryrobots.azurecr.io/web:v1.0.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 300m
            memory: 200Mi

        livenessProbe:
          httpGet:
            path: /nginx_status
            port: 8080

        readinessProbe:
          httpGet:
            path: /nginx_status
            port: 8080
