Kubernetes-Manifests/web/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    service: web
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    service: web
  type: ClusterIP
